# Platzi

./: .gitignore  .gitmodules  README.md  enviroments.yml
Analsis_Exploratorio/: 1.0-jvelezmagic-conociendo-nuestros-datos-app.ipynb  1.0-jvelezmagic-conociendo-nuestros-datos.ipynb
C_Sharp/randomNumberGuesser/: ConsoleApp1.sln  Program.cs
C_Sharp/restaurant10TablesReservationSystem/: Program.cs
DataViz/: enviroment.yml  states.ipynb  superstore.sql  superstore_exploratory_analysis.ipynb  viz.ipynb
Database/: Clinica.sql  Diagrama ER Platziblog.html  DiagramaE3.html  Platziblog_Diagram.html  clinica.ipynb  platzi_blog.sql  postgres.html
Estadistica/: Bootstrap.ipynb  CrossValidation.ipynb  Muestreos.ipynb  PruebasHipotesis.ipynb  ejercicios.ipynb  intervalosConfianza.ipynb
Excel/: .~lock.orders_has_products.ods#  Platzi.ods  orders_has_products.ods  orders_has_products.xlsx  product_sold_vendor.ods  vendor.ods
Javascript/: Cards.js  index.html
Javascript/async/: package-lock.json  package.json
Kotlin/: HelloWorld.kt
LinearAlgebra/: examen.ipynb  requirements.txt
Machine_Learning/: reto_procesando_un_dataset.ipynb
OpenAI/: Basic.ipynb  camisa.ipynb  chatbot.ipynb  game.ipynb
Python/: dic_comprenhension.py  enviroments.yml  high_order.py  list_comprenhension.py  lists_and_dicts.py
Python-Selenium/: pyproject.toml  pytest.ini
Python-Selenium/python_selenium/: bot_clima_bogota.py  first_tests.py
Python/Hangman/: hangman.py  requirements.txt
Python/JSON-Like_Manipulation/: data.py  filter.py
Python/Numpy&Pandas/: dtype.ipynb
(+12 files in other folders)
